--- a/termsConditions.html
+++ b/termsConditions.html
@@ -92,6 +92,11 @@ Document   : html
 <p>
 	Alpha Internet Cafe may revise these terms of use for its web site at any time without notice. By using this web site you are agreeing to be bound by the then current version of these Terms and Conditions of Use.
 </p>
+<p>
+	<h4>
+	This Website functions best on fireFox 3x+,Google Chrome 20+.
+	</h4>
+</p>
 
 <h3>
 	8. Governing Law
