--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>Alpha Internet Cafe online</title>
         <link rel="stylesheet" href="style/style.css" type="text/css" media="screen" />
+        <!--[if lt IE 8]>
+	<link href="style/styleIE.css" rel="stylesheet" type="text/css" />
+	<![endif]-->
         <script type="text/javascript">
             //create a new request object
             var request;
