--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>Alpha Internet Cafe online</title>
-        <link rel="stylesheet" href="style/style.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="style/style.css" type="text/css" />
         <!--[if lt IE 8]>
-	<link href="style/styleIE.css" rel="stylesheet" type="text/css" />
+	<link  rel="stylesheet" href="style/styleIE.css"  type="text/css" />
 	<![endif]-->
         <script type="text/javascript">
             //create a new request object
